{
    "name": "TitleInputs",
    "maps": [
        {
            "name": "UI",
            "id": "2374e674-a7f2-4aca-a655-8d4728fdfa79",
            "actions": [
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "6bd899ad-d03f-402f-a732-a0af2b7880b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Navigate",
                    "type": "PassThrough",
                    "id": "461cbea2-0145-42dd-b940-14124c91e426",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "50db8a86-1b1e-430e-ae89-68f33398bf5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "2fd33894-b24a-4bf4-9524-8d7b8023e369",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "ed9fbc2a-2705-4e51-a628-c447c08d505a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScrollWheel",
                    "type": "PassThrough",
                    "id": "00d309de-43a0-4e6f-bf08-704e9dba3e44",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MiddleClick",
                    "type": "PassThrough",
                    "id": "2657b150-ea7f-4a2c-aa48-5500cc175755",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "PassThrough",
                    "id": "7e079993-2e89-43f5-88a2-904ed59cec43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TrackedDevicePosition",
                    "type": "PassThrough",
                    "id": "67190531-e8eb-466d-9ec8-57c097233a65",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TrackedDeviceOrientation",
                    "type": "PassThrough",
                    "id": "3ec52ae0-dd00-4d43-ac99-be1d61ad24ba",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1bdd59c7-8e7f-419e-92b7-8bad1a6f9d69",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Gamepad",
                    "id": "caf3624a-1317-4487-85db-da6a595bd3bd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "60c6e4b6-5d6f-4078-b428-ec5d0eadb091",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "up",
                    "id": "856fab4a-6f5b-4d9e-aedf-0929c5a13281",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "685ab72d-1fe1-473f-ab8d-b6b927f917ae",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b17e9c48-4694-4bc7-b80d-6d30d64adcac",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d19bf5ca-f0c6-473e-97ee-4bb77df5e40d",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "540a172a-59c0-4c1e-b9d5-a86521d8c233",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ede2b4ca-c0a6-421b-aff7-2e1fbb4462fc",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c3b9a459-54ca-4447-aad5-151a14cf0bc1",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6fc8a80e-feb7-458b-9ab8-caa0152ae7fd",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Joystick",
                    "id": "0a794577-b53b-47b6-a040-a67755157b67",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e08305da-cad0-43ec-a3e0-a6c675d0e052",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4288c319-a28b-475e-89f3-2ac4a7195611",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "def94fb1-f7e7-4599-842a-d0ee2cfd7340",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c6494f3d-e8b1-4bd5-9635-25e307873857",
                    "path": "<Joystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "273974f3-c517-41fe-98c0-68d6b5819ff2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9bc1e550-baee-48a3-a9c1-85a9ac65f2cf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "up",
                    "id": "3637c900-c256-424f-9679-5b48333b013f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d268160c-a01e-4a57-8d13-fa1d4aac75d8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "406046fe-0d90-4ec0-a6c1-60a79da60629",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "241cbe0d-1655-4f75-8a43-062aa0b0fee7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3fa39e36-ab63-4722-bd14-92880f286f9a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "01b32a68-1a8d-4c94-a47f-f6746797c39f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "304896ee-f1cf-45d5-8e97-59f794b4a146",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1d34acf0-3136-4928-8f92-7ea35ebe7df1",
                    "path": "*/{Cancel}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8d9f79f-3ba6-4cfe-b009-a19f8906dbe2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea490865-37bd-4e73-bdc9-8dfcdb0c09ef",
                    "path": "<Pen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6aa5da9-b5a4-4978-96ee-f48b4a6f16ff",
                    "path": "<Touchscreen>/touch*/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d582b8c-679b-43c0-a512-4d8ad1fffbe6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6bbaf90-6043-4733-951e-2bf01159482a",
                    "path": "<Pen>/tip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5af1e622-e311-4d94-a400-b02119b3f458",
                    "path": "<Touchscreen>/touch*/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50ecd58e-7152-462e-ac71-489fce31c3de",
                    "path": "<XRController>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc49894c-2c87-4da5-a691-0ee4e491c76a",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9f7854b-469c-4898-a5b3-adf570871f3a",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5dfd6e4-d458-44b1-894d-22cc80785f22",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0dae9bca-3298-4193-a650-8c374349aba1",
                    "path": "<XRController>/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrackedDevicePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e536408e-c073-4aff-9163-33bae94751ba",
                    "path": "<XRController>/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrackedDeviceOrientation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}